# dotfiles-installer

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  TODO.md  config.toml  justfile
.github/: dependabot.yml
.github/workflows/: aur-update.yml  release.yml  rust.yml
src/: logging.rs  main.rs
src/cli/: args.rs  formatter.rs  handlers.rs  interactive.rs  mod.rs  prompt_manager.rs  validator.rs
src/cli/commands/: init.rs  install.rs  list.rs  mod.rs  remove.rs
src/config/: lexer.rs  mod.rs  parser.rs  settings.rs  structs.rs
src/configs/: clone.rs  install.rs  laptop.rs
src/dotfiles_manager/: clone.rs  install.rs  laptop.rs  mod.rs
src/hardware/: amd.rs  hardware.rs  intel.rs  mod.rs  nvidia.rs  utils.rs  videocard.rs
src/system/: hostname.rs  mod.rs  sudoers.rs  timezone.rs  utils.rs
src/utils/: mod.rs  network.rs  network_retry.rs
