[package]
name = "dotfiles-installer"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.9"
gfxinfo = "0.1.2"
git2 = { version = "0.20.4", features = ["https"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
