[package]
name = "dotfiles-installer"
version = "1.0.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z" 
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.9"
fern = "0.7.1"
gfxinfo = "0.1.2"
git2 = { version = "0.20.4", features = ["https"] }
indicatif = "0.18.4"
inquire = "0.9.4"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
